--- a/public/index.html
+++ b/public/index.html
@@ -14,4 +14,5 @@
     <div id="app"></div>
     <!-- built files will be auto injected -->
   </body>
+  <script src="https://kit.fontawesome.com/941042cc88.js" crossorigin="anonymous"></script>
 </html>
